src/objects/cmc_GameSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Game settings for CMC, such as the specific Challenge names to award in certain situations.</description>
    <fields>
        <fullName>Challenge_Asset_First_Timer__c</fullName>
        <description>Challenge to award to a user the first time their asset (i.e. they&apos;re the primary contributor for) is marked active.</description>
        <inlineHelpText>Challenge to award to a user the first time their asset (i.e. they&apos;re the primary contributor for) is marked active.</inlineHelpText>
        <label>Challenge - Asset First Timer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Asset_Royalties__c</fullName>
        <description>Which Challenge to award to a user when their asset gets used.</description>
        <inlineHelpText>Which Challenge to award to a user when their asset gets used.</inlineHelpText>
        <label>Challenge - Asset Royalties</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_New_Asset__c</fullName>
        <description>Which Challenge to award to a user that creates a new Asset.</description>
        <inlineHelpText>Which Challenge to award to a user that creates a new Asset.</inlineHelpText>
        <label>Challenge - New Asset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_New_Document_Asset__c</fullName>
        <description>Challenge to create New Document Asset with Status=&quot;Active&quot;</description>
        <inlineHelpText>Challenge to create New Document Asset with Status=&quot;Active&quot;</inlineHelpText>
        <label>Challenge - New Document Asset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Propose_Asset_on_Opportunity__c</fullName>
        <description>Which Challenge to award to a user that proposes a CMC Asset on a Opportunity.</description>
        <inlineHelpText>Which Challenge to award to a user that proposes a CMC Asset on a Opportunity.</inlineHelpText>
        <label>Challenge - Propose Asset on Opportunity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Propose_Asset_on_Project__c</fullName>
        <description>Which Challenge to award to a user that uses a CMC Asset on a Project.</description>
        <inlineHelpText>Which Challenge to award to a user that uses a CMC Asset on a Project.</inlineHelpText>
        <label>Challenge - Propose Asset on Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Use_Asset_on_Project__c</fullName>
        <description>Which Challenge to award to a user that uses a CMC Asset on a Project.</description>
        <inlineHelpText>Which Challenge to award to a user that uses a CMC Asset on a Project.</inlineHelpText>
        <label>Challenge - Use Asset on Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CMC Game Settings</label>
</CustomObject>